--- a/components/api_server/pyproject.toml
+++ b/components/api_server/pyproject.toml
@@ -13,11 +13,11 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "coverage==7.3.0",
+    "coverage==7.3.1",
     "pip==23.2.1",
     "pipx==1.2.0",
     "pip-tools==7.3.0",  # To add hashes to requirements
-    "pydantic==1.10.9",  # Needed for importing the data model in the tests from the shared data model component
+    "pydantic==1.10.12",  # Needed for importing the data model in the tests from the shared code component
     "types-cryptography==3.3.23.2",
     "types-ldap3==2.9.13.14",
     "types-requests==2.31.0.2",
