--- a/components/shared_code/pyproject.toml
+++ b/components/shared_code/pyproject.toml
@@ -5,7 +5,7 @@ dependencies = [
     "bottle==0.12.25",
     "cryptography==41.0.3",
     "packaging==23.1",
-    "pydantic==1.10.12",
+    "pydantic==2.3.0",
     "pymongo==4.5.0",
     "python-dateutil==2.8.2",
 ]
@@ -25,7 +25,7 @@ tools = [
     "black==23.9.1",
     "mypy==1.5.1",
     "pip-audit==2.6.1",
-    "pydantic==1.10.12",
+    "pydantic==2.3.0",  # Needed because pipx needs to inject Pydantic into the mpyp venv, see ci/quality.sh
     "ruff==0.0.289",
     "safety==2.3.5",
     "vulture==2.9.1"
@@ -65,6 +65,7 @@ ignore = [
     "D203",    # https://beta.ruff.rs/docs/rules/#pydocstyle-d - prevent warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible. Ignoring `one-blank-line-before-class`
     "D213",    # https://beta.ruff.rs/docs/rules/#pydocstyle-d - prevent warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible. Ignoring `multi-line-summary-second-line`
     "FBT",     # https://beta.ruff.rs/docs/rules/#flake8-boolean-trap-fbt - not sure of the value of preventing "boolean traps"
+    "PD",      # https://beta.ruff.rs/docs/rules/#pandas-vet-pd - pandas isn't used
     "PT",      # https://beta.ruff.rs/docs/rules/#flake8-pytest-style-pt - pytest isn't used
 ]
 
@@ -73,10 +74,6 @@ section-order = ["future", "standard-library", "third-party", "first-party", "te
 
 [tool.ruff.isort.sections]
 "tests" = ["tests"]
-
-[tool.ruff.pep8-naming]
-# Allow Pydantic's `@validator` decorator to trigger class method treatment.
-classmethod-decorators = ["classmethod", "pydantic.validator"]
 
 [tool.ruff.per-file-ignores]
 ".vulture_ignore_list.py" = ["ALL"]
