--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 19.x]
+        node-version: [20.x]
 
     steps:
     - uses: actions/checkout@v4.0.0
