--- a/components/api_server/pyproject.toml
+++ b/components/api_server/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "api_server"
-version = "5.1.0"
+version = "5.2.0-rc.1"
 dependencies = [
     "bottle==0.12.25",
     "cryptography==41.0.4",
