--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "docs"
-version = "5.1.0"
+version = "5.2.0-rc.1"
 dependencies = [
     "furo==2023.9.10",
     "gitpython==3.1.37",
