Documenteer PROXY_PROTOCOL wijziging

--- a/openshift/helm/templates/renderer-deployment.yaml
+++ b/openshift/helm/templates/renderer-deployment.yaml
@@ -23,6 +23,8 @@ spec:
               value: {{ .Values.www.name }}
             - name: PROXY_PORT
               value: "80"
+            - name: PROXY_PROTOCOL
+              value: "http"
             - name: TZ
               value: Europe/Amsterdam
           image: {{ .Values.renderer.image }}
