--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 COMPOSE_PATH_SEPARATOR=:
 COMPOSE_FILE=docker/docker-compose.yml:docker/docker-compose.override.yml
 COMPOSE_PROJECT_NAME=quality-time
-QUALITY_TIME_VERSION=v5.2.0-rc.1
+QUALITY_TIME_VERSION=v5.2.0
