--- a/.github/workflows/application-tests.yml
+++ b/.github/workflows/application-tests.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v4.1.0
       - name: Run application tests
         env:
-          QUALITY_TIME_VERSION: v5.2.0-rc.1
+          QUALITY_TIME_VERSION: v5.2.0
           ENV: ci
         run: |
           mkdir -p build
