--- a/components/collector/pyproject.toml
+++ b/components/collector/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "collector"
-version = "5.2.0"
+version = "5.3.0-rc.1"
 dependencies = [
     "aiogqlc==4.0.0",
     "aiohttp==3.8.5",
