--- a/components/frontend/package.json
+++ b/components/frontend/package.json
@@ -18,6 +18,7 @@
     "react-timeago": "^7.2.0",
     "react-toastify": "^9.1.3",
     "semantic-ui-react": "^2.1.4",
+    "use-local-storage-state": "^19.1.0",
     "victory": "^36.6.11"
   },
   "scripts": {
